--- a/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
+++ b/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
@@ -9,11 +9,15 @@
             <BodyContent>
                 <div class="d-flex align-center justify-space-between full-width">
                     <span>@playlistFolder.FolderName</span>
-                    <div>
+                    <div class="d-flex">
                         <MudMenu Icon="@Icons.Material.Filled.Add" Size="Size.Small">
                             <MudMenuItem Icon="@Icons.Material.Filled.PlaylistAdd" OnClick="() => OpenAddPlaylistDialog(playlistFolder)">Add playlist</MudMenuItem>
                             <MudMenuItem Icon="@Icons.Material.Filled.PlaylistAdd" OnClick="() => OpenAddDynamicPlaylistDialog(playlistFolder)">Add dynamic playlist</MudMenuItem>
                             <MudMenuItem Icon="@Icons.Material.Filled.CreateNewFolder" OnClick="() => OpenAddPlaylistFolderDialog(playlistFolder)">Add playlist folder</MudMenuItem>
+                        </MudMenu>
+                        <MudMenu Icon="@Icons.Material.Filled.MoreVert" Size="Size.Small">
+                            <MudMenuItem Icon="@Icons.Material.Filled.Edit" OnClick="() => OpenEditPlaylistFolderDialog(playlistFolder)">Rename</MudMenuItem>
+                            <MudMenuItem Icon="@Icons.Material.Filled.Delete" OnClick="() => OpenDeletePlaylistFolderDialog(playlistFolder)">Delete</MudMenuItem>
                         </MudMenu>
                     </div>
                 </div>
@@ -49,7 +53,7 @@
     }
 }
 
-<MudDialog @bind-Visible="DeleteDialogVisible" Options="new() { BackdropClick = false }">
+<MudDialog @bind-Visible="DeletePlaylistDialogVisible" Options="new() { BackdropClick = false }">
     <DialogContent>
         <MudText Typo="Typo.body1" Class="mb-3">Are you sure you want to delete the "@PlaylistToDelete.Title" playlist?</MudText>
     </DialogContent>
@@ -68,6 +72,18 @@
             {
                 @:Delete
             }
+        </MudButton>
+    </DialogActions>
+</MudDialog>
+
+<MudDialog @bind-Visible="DeletePlaylistFolderDialogVisible" Options="new() { BackdropClick = false }">
+    <DialogContent>
+        <MudText Typo="Typo.body1" Class="mb-3">Are you sure you want to delete the "@PlaylistFolderToDelete.FolderName" playlist folder? All playlists and folders within this folder will be deleted.</MudText>
+    </DialogContent>
+    <DialogActions>
+        <MudButton OnClick="ClosePlaylistFolderDelete">Cancel</MudButton>
+        <MudButton Color="@Color.Error" Variant="Variant.Filled" OnClick="DeletePlaylistFolder">
+            Delete
         </MudButton>
     </DialogActions>
 </MudDialog>
