--- a/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
+++ b/MapMaven/Components/Playlists/PlaylistTreeViewFolder.razor
@@ -33,20 +33,30 @@
         <MudTreeViewItem Value="playlistNode.Playlist" Class="not-expandable" CanExpand="false">
             <BodyContent>
                 <div class="playlist-list-item">
-                    <PlaylistCover Playlist="playlistNode.Playlist" Class="ml-3 mr-3" Style="width: 30px"></PlaylistCover>
+                    <PlaylistCover Playlist="playlistNode.Playlist" Class="mr-3" Style="width: 30px"></PlaylistCover>
                     <span>@playlistNode.Playlist.Title</span>
-                    <MudMenu Icon="@Icons.Material.Filled.MoreVert" Size="Size.Small" Class="ml-auto">
-                        <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlistNode.Playlist)">
-                            <div class="d-flex">
-                                <MudIcon Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Class="mr-1" /> Edit
-                            </div>
-                        </MudMenuItem>
-                        <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlistNode.Playlist)">
-                            <div class="d-flex">
-                                <MudIcon Icon="@Icons.Material.Filled.Delete" Size="Size.Small" Class="mr-1" /> Delete
-                            </div>
-                        </MudMenuItem>
-                    </MudMenu>
+
+                    <div class="d-flex align-center ml-auto">
+                        @if (playlistNode.Playlist.IsDynamicPlaylist)
+                        {
+                            <MudTooltip Text="Dynamic playlist" Color="Color.Info" RootClass="d-flex">
+                                <MudIcon Icon="@Icons.Material.Filled.ElectricBolt" Size="Size.Small" Color="Color.Info" />
+                            </MudTooltip>
+                        }
+
+                        <MudMenu Icon="@Icons.Material.Filled.MoreVert" Size="Size.Small">
+                            <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlistNode.Playlist)">
+                                <div class="d-flex">
+                                    <MudIcon Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Class="mr-1" /> Edit
+                                </div>
+                            </MudMenuItem>
+                            <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlistNode.Playlist)">
+                                <div class="d-flex">
+                                    <MudIcon Icon="@Icons.Material.Filled.Delete" Size="Size.Small" Class="mr-1" /> Delete
+                                </div>
+                            </MudMenuItem>
+                        </MudMenu>
+                    </div>
                 </div>
             </BodyContent>
         </MudTreeViewItem>
