Clear button for playlist list filter

--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -34,14 +34,19 @@
                       IconSize="Size.Small"
                       Class="mx-4 mb-2 small-input">
         </MudTextField>
-        <MudChipSet T="PlaylistType?"
-                    @bind-SelectedValue="PlaylistTypeFilter"
-                    SelectionMode="SelectionMode.ToggleSelection"
-                    Size="Size.Small"
-                    Class="mx-4 mb-2">
-            <MudChip T="PlaylistType?" Value="@PlaylistType.Playlist" SelectedColor="Color.Info">Playlists</MudChip>
-            <MudChip T="PlaylistType?" Value="@PlaylistType.DynamicPlaylist" SelectedColor="Color.Info">Dynamic playlists</MudChip>
-        </MudChipSet>
+        <div class="d-flex align-center mx-4 mb-2">
+            @if (PlaylistTypeFilter is not null)
+            {
+                <MudIconButton Icon="@Icons.Material.Filled.Clear" Size="Size.Small" OnClick="() => PlaylistTypeFilter = null" />
+            }
+            <MudChipSet T="PlaylistType?"
+                        @bind-SelectedValue="PlaylistTypeFilter"
+                        SelectionMode="SelectionMode.ToggleSelection"
+                        Size="Size.Small">
+                <MudChip T="PlaylistType?" Value="@PlaylistType.Playlist" SelectedColor="Color.Info" Style="margin: 1px">Playlists</MudChip>
+                <MudChip T="PlaylistType?" Value="@PlaylistType.DynamicPlaylist" SelectedColor="Color.Info" Style="margin: 1px">Dynamic playlists</MudChip>
+            </MudChipSet>
+        </div>
         @if (LoadingPlaylists)
         {
             <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
