--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -52,7 +52,7 @@ else
                                     </ChildContent>
                                     <TooltipContent>
                                         <p style="text-align: left; max-width: 300px;">
-                                            The pool of maps the dynamic playlist should pull maps from.<br />
+                                            The pool of maps the live playlist should pull maps from.<br />
                                             <br />
                                             <b>Downloaded maps:</b> Includes all downloaded maps.<br />
                                             <b>Improvement maps:</b> Includes all ranked maps. Ranked maps can, in addition to the standard map filters/sortings, be filtered on/sorted by estimated scores.
