--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -269,7 +269,7 @@
                                                     <MudTooltip Text="Create playlist from recommended maps">
                                                         <MudMenu Icon="@Icons.Material.Filled.PlaylistAdd">
                                                             <MudMenuItem OnClick="AddRecommendedMapsToPlaylist" Icon="@Icons.Material.Filled.PlaylistAdd">Create recommended maps playlist</MudMenuItem>
-                                                            <MudMenuItem OnClick="AddRecommendedMapsDynamicPlaylist" Icon="@Icons.Material.Filled.PlaylistAdd">Create recommended maps dynamic playlist</MudMenuItem>
+                                                            <MudMenuItem OnClick="AddRecommendedMapsDynamicPlaylist" Icon="@Icons.Material.Filled.PlaylistAdd">Create recommended maps live playlist</MudMenuItem>
                                                         </MudMenu>
                                                     </MudTooltip>
                                                 }
