--- a/MapMaven/Components/SideNav.razor
+++ b/MapMaven/Components/SideNav.razor
@@ -1,6 +1,7 @@
 ﻿@inherits ReactiveComponent
 
 <MudDrawer Open="true" Elevation="1" Class="sidenav">
+    <div class="resizer-handle" style="position: absolute;right: 0;height: 100%;background-color: red;width: 5px; z-index: 9999999;"></div>
     <PlayerProfile></PlayerProfile>
     <MudNavMenu Color="Color.Primary" Bordered="true" Class="full-height d-flex flex-column fill-remaining-space">
         @if (!string.IsNullOrEmpty(PlayerId))
@@ -41,3 +42,7 @@
         </div>
     </MudNavMenu>
 </MudDrawer>
+
+<HeadContent>
+    <script src="./Components/SideNav.razor.js"></script>
+</HeadContent>
