--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -51,7 +51,7 @@
         {
             <MudProgressCircular Color="Color.Info" Size="Size.Small" Indeterminate="true" Class="align-self-center" />
         }
-        <div class="full-height" style="overflow-y: auto;">
+        <div class="full-height" style="overflow-y: auto; margin-right: 8px;">
             @if (string.IsNullOrEmpty(PlaylistSearchText))
             {
                 <MudTreeView T="Playlist" @ref="PlaylistTreeView" SelectedValue="SelectedPlaylist" SelectedValueChanged="OnPlaylistSelect" Color="Color.Primary" ExpandOnClick="true" AutoExpand="true">
