--- a/MapMaven/Components/SideNav.razor
+++ b/MapMaven/Components/SideNav.razor
@@ -1,6 +1,6 @@
 ﻿@inherits ReactiveComponent
 
-<MudDrawer Open="true" Elevation="1" Class="sidenav">
+<MudDrawer Open="true" Elevation="1" Class="sidenav" Style="width: var(--main-drawer-width-left)">
     <div class="resizer-handle"></div>
     <PlayerProfile></PlayerProfile>
     <MudNavMenu Color="Color.Primary" Bordered="true" Class="full-height d-flex flex-column fill-remaining-space">
